<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_page_title" />

    <LinearLayout
        style="@style/layout_padding_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_anchor_nickname" />

        <EditText
            android:id="@+id/live_prepare_anchor_nickname_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/hint_anchor_nickname"
            android:lines="1"
            android:singleLine="true" />
    </LinearLayout>

    <View style="@style/prepare_splitline" />

    <LinearLayout
        style="@style/layout_padding_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_anchor_headimg" />

        <io.agora.liveshow.demo.widget.CircleImageView
            android:id="@+id/live_prepare_anchor_headimg_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:onClick="doChangeHeadimg"
            android:src="@drawable/add_small_bg" />
    </LinearLayout>

    <View style="@style/prepare_splitline" />

    <LinearLayout
        style="@style/layout_padding_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_live_cover" />

        <ImageView
            android:id="@+id/live_prepare_cover_iv"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:onClick="doChangeLiveCover"
            android:scaleType="fitXY"
            android:src="@drawable/add_bg" />
    </LinearLayout>

    <View style="@style/prepare_splitline" />

    <LinearLayout
        style="@style/layout_padding_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_anchor_tags" />

        <me.gujun.android.taggroup.TagGroup
            android:id="@+id/live_prepare_anchor_tags_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:atg_backgroundColor="@color/colorPrimary"
            app:atg_borderColor="@color/colorPrimary"
            app:atg_horizontalPadding="8dp"
            app:atg_inputHint="@string/hint_add_tag"
            app:atg_inputTextColor="@color/white"
            app:atg_isAppendMode="true"
            app:atg_pressedBackgroundColor="@color/colorPrimary"
            app:atg_textColor="@color/white"
            app:atg_textSize="16sp"
            app:atg_verticalPadding="5dp" />

    </LinearLayout>

    <View
        android:layout_width="1px"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_padding"
        android:layout_marginRight="@dimen/horizontal_padding"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_round_bg"
        android:onClick="doStartLive"
        android:text="@string/btn_start_live"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</LinearLayout>