<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_voice_dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialog_voice_error_layout"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_voice_cancel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_voice_cancel_bg"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/voice_input_error_cancel"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_voice_inputing_layout"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_voice_icon" />

            <ImageView
                android:id="@+id/dialog_voice_inputing_progress_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_voice_input_1" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/voice_input_to_cancel"
            android:textColor="@color/white" />
    </LinearLayout>

    <io.agora.liveshow.demo.widget.AudioRecordButton
        android:id="@+id/dialog_voice_record_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/shape_round_bg"
        android:text="@string/voice_input_to_start"
        android:textColor="@color/white" />

</LinearLayout>