<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.agora.liveshow.demo.activity.RoleSelectActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scaleType="center"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_round_bg"
            android:onClick="iAmLiveAnchor"
            android:text="@string/btn_am_anchor"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/shape_round_bg"
            android:onClick="iAmLiveViewer"
            android:text="@string/btn_am_viewer"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:padding="10dp"
            android:text="@string/msg_language_select"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="中文"
            android:onClick="changeToChineseEnv"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <View
            android:layout_width="1px"
            android:layout_height="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="English"
            android:onClick="changeToEnglishEnv"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>